# Blinky

./: .gitignore  README.md  api.js  firebase-init.js  firestore.rules  index.html  main.py  pyproject.toml  requirements.txt  script.js  storage.js  style.css  styles.css
backend/: .env.example  Dockerfile  blinky.db  fly.toml  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  bookmarks.py  domains.py
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: index.css  main.tsx
frontend/src/api/: bookmarks.ts  client.ts
frontend/src/components/: BookmarkItem.tsx  DemoModal.tsx  Modal.tsx  Navbar.tsx  Section.tsx  SectionGrid.tsx
frontend/src/hooks/: useAuth.ts  useBookmarks.ts
frontend/src/pages/: AuthCallback.tsx  ExtensionAuth.tsx  Home.tsx
